# qc-asset-tracker

./: .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  make_fake_seq.py  pyproject.toml  qc_cleanup.py  qc_crawl.py  requirements-dev.txt  requirements.txt
src/qc_asset_crawler/: config.py  crawler.py  hashcache.py  hashing.py  mutation.py  qcstate.py  sequences.py  shims.py  sidecar.py  summary.py  trak_client.py
src/qc_asset_crawler.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: conftest.py  test_cli_help.py  test_content_change_asset_id.py  test_crawler_run.py  test_hashcache.py  test_qc_crawl_logging.py  test_sequence_mutation.py  test_sequences.py  test_sidecar_schema.py  test_summary.py  test_summary_helpers.py  test_version.py
utils/after-effects/: Check_QC_Sidecars.jsx
